# shopify-gql-helper-py

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml  upload-python-package.yml
shopify_gql_helper/: __init__.py  client.py  errors.py  paginate.py  session.py  throttle.py  transport.py
tests/: test_execute.py  test_paginate.py  test_throttle.py
tests/fixtures/: products_page1.json  products_page2.json
