[project]
name = "shopify-gql-helper"
version = "0.1.0"
description = "Tiny, production-minded helper for the Shopify Admin GraphQL API"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Talha" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["shopify", "graphql", "pagination", "throttling", "ecommerce"]
dependencies = ["requests>=2.31.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "types-requests>=2.31.0",
  # "ruff>=0.5.0",  # optional
]

[project.urls]
Homepage = "https://github.com/tulayha/shopify-gql-helper-py"
Repository = "https://github.com/tulayha/shopify-gql-helper-py"
Documentation = "https://github.com/tulayha/shopify-gql-helper-py#readme"
Changelog = "https://github.com/tulayha/shopify-gql-helper-py/releases"
Issues = "https://github.com/tulayha/shopify-gql-helper-py/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shopify_gql_helper*"]

[tool.setuptools.package-data]
shopify_gql_helper = ["py.typed"]
